# halle

./: Cargo.toml  README.md  tailwind.config.js
.cargo/: config.toml
assets/: index.css  tailwind.css
assets/borrowed_styles/: borrowed.html  extra.html
migrations/: 0001_articles_table.sql  0001_initdb.sql
src/: main.rs
src/static/: index.html
src/web/: init_db.rs  mod.rs  routes_handler.rs
templates/: 22.html  33.html  about.html  article1.html  article2.html  articles.html  base.html  blog.html  events.html  explore.html  history.html  home.html  index.html  interests.html  main-page.html  places.html  portfolio.html  settings.html
