[package]
name = "axum-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tera = "1.19.1"
lazy_static = "1.4.0"
