[package]
name = "axum-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tera = "1.19.1"
lazy_static = "1.4.0"
tracing = "0.1.9"
tower = "0.4.9"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
chrono = "0.4.38"
